# swagger-gen/go/api/swagger.yaml
@@ -322,6 +322,25 @@ paths:
           description: "Request was successful"
           schema: {}
       deprecated: false
+  /v2/private/wallet/balance:
+    get:
+      tags:
+      - "Wallet"
+      summary: "get wallet balance info"
+      operationId: "Wallet.getBalance"
+      parameters:
+      - name: "coin"
+        in: "query"
+        description: "Coin.enum {BTC,EOS,XRP,ETH,USDT}"
+        required: false
+        type: "string"
+        x-exportParamName: "Coin"
+        x-optionalDataType: "String"
+      responses:
+        200:
+          description: "Request was successful"
+          schema: {}
+      deprecated: false
   /open-api/wallet/risk-limit:
     post:
       tags:
@@ -1390,9 +1409,6 @@ definitions:
       stop_loss:
         type: "number"
         format: "int32"
-      trailing_stop:
-        type: "number"
-        format: "int32"
       position_status:
         type: "string"
       deleverage_indicator:
@@ -2242,6 +2258,67 @@ definitions:
       updated_at:
         type: "string"
     description: "Get withdraw records response"
+  WithdrawBalanceBase:
+    type: "object"
+    properties:
+      ret_code:
+        type: "number"
+        format: "int32"
+      ret_msg:
+        type: "string"
+      ext_code:
+        type: "string"
+      ext_info:
+        type: "string"
+      result:
+        type: "object"
+        properties: {}
+      time_now:
+        type: "string"
+    description: "Get account withdraw balance response"
+  WithdrawBalance:
+    type: "object"
+    properties:
+      equity:
+        type: "number"
+        format: "double"
+      available_balance:
+        type: "number"
+        format: "double"
+      used_margin:
+        type: "number"
+        format: "double"
+      order_margin:
+        type: "number"
+        format: "double"
+      position_margin:
+        type: "number"
+        format: "double"
+      occ_closing_fee:
+        type: "number"
+        format: "double"
+      occ_funding_fee:
+        type: "number"
+        format: "double"
+      wallet_balance:
+        type: "number"
+        format: "double"
+      realised_pnl:
+        type: "number"
+        format: "double"
+      unrealised_pnl:
+        type: "number"
+        format: "double"
+      cum_realised_pnl:
+        type: "number"
+        format: "double"
+      given_cash:
+        type: "number"
+        format: "double"
+      service_cash:
+        type: "number"
+        format: "double"
+    description: "Get wallet balance response"
   SetRiskLimitBase:
     type: "object"
     properties:
@@ -2390,9 +2467,6 @@ definitions:
         type: "number"
         format: "double"
       stop_loss:
-        type: "number"
-        format: "double"
-      trailing_stop:
         type: "number"
         format: "double"
       position_status:
