# swagger-gen/go/model_withdraw_balance_base.go
@@ -1,0 +1,21 @@
+/*
+ * Bybit API
+ *
+ * ## REST API for the Bybit Exchange. Base URI: [https://api-testnet.bybit.com]  
+ *
+ * API version: 1.0.0
+ * Contact: support@bybit.com
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+
+package swagger
+
+// Get account withdraw balance response
+type WithdrawBalanceBase struct {
+	RetCode float32 `json:"ret_code,omitempty"`
+	RetMsg string `json:"ret_msg,omitempty"`
+	ExtCode string `json:"ext_code,omitempty"`
+	ExtInfo string `json:"ext_info,omitempty"`
+	Result *interface{} `json:"result,omitempty"`
+	TimeNow string `json:"time_now,omitempty"`
+}
